--- a/Modules/Magicomatic.Modules.Collection/Magicomatic.Modules.Collection.csproj
+++ b/Modules/Magicomatic.Modules.Collection/Magicomatic.Modules.Collection.csproj
@@ -48,7 +48,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Include="CollectionModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -78,18 +77,20 @@
     </None>
     <AppDesigner Include="Properties\" />
   </ItemGroup>
-  <ItemGroup />
-
+  <ItemGroup>
+    <ProjectReference Include="..\..\Magicomatic.Core\Magicomatic.Core.csproj">
+      <Project>{23f3a9d1-4202-40d2-a718-e18d894be915}</Project>
+      <Name>Magicomatic.Core</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Page Include="Views\ViewA.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
-
   <ItemGroup>
     <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
   </ItemGroup>
-
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
