--- a/Modules/Magicomatic.Modules.Settings/Magicomatic.Modules.Settings.csproj
+++ b/Modules/Magicomatic.Modules.Settings/Magicomatic.Modules.Settings.csproj
@@ -4,20 +4,18 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EBE6F46E-51EE-44E3-AC65-7C9CDD251926}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <ProjectGuid>{BF2BED4B-B5DE-411C-B9B2-E7048CF1FD94}</ProjectGuid>
+    <OutputType>library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Magicomatic</RootNamespace>
-    <AssemblyName>Magicomatic</AssemblyName>
+    <RootNamespace>Magicomatic.Modules.Settings</RootNamespace>
+    <AssemblyName>Magicomatic.Modules.Settings</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -27,7 +25,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -52,25 +49,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="Views\MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="Views\MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
+    <Compile Include="SettingsModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -84,6 +63,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="ViewModels\ViewAViewModel.cs" />
+    <Compile Include="Views\ViewA.xaml.cs">
+      <DependentUpon>ViewA.xaml</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -92,30 +75,22 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MahApps.Metro">
-      <Version>1.6.5</Version>
-    </PackageReference>
-    <PackageReference Include="Prism.Unity" Version="7.2.0.1367" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Magicomatic.Core\Magicomatic.Core.csproj">
+    <ProjectReference Include="..\..\Magicomatic.Core\Magicomatic.Core.csproj">
       <Project>{23f3a9d1-4202-40d2-a718-e18d894be915}</Project>
       <Name>Magicomatic.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Modules\Magicomatic.Modules.Collection\Magicomatic.Modules.Collection.csproj">
-      <Project>{151F2860-6A49-4E35-A014-BE022EF37561}</Project>
-      <Name>Magicomatic.Modules.Collection</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Modules\Magicomatic.Modules.Decks\Magicomatic.Modules.Decks.csproj">
-      <Project>{3DF45301-D49E-4D5C-8A45-C3BF58CCEFE5}</Project>
-      <Name>Magicomatic.Modules.Decks</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Modules\Magicomatic.Modules.Settings\Magicomatic.Modules.Settings.csproj">
-      <Project>{BF2BED4B-B5DE-411C-B9B2-E7048CF1FD94}</Project>
-      <Name>Magicomatic.Modules.Settings</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Page Include="Views\ViewA.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Prism.Wpf" Version="7.2.0.1367" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
